--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
     <link href="css/toolkit-minimal.css" rel="stylesheet">
+    <link href="css/my-theme.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body>
 
@@ -37,18 +32,22 @@
         <div class="pi collapse" id="navbar-collapse">
           <ul class="nav navbar-nav ow">
             <li class="active">
-              <a href="/index">Minimal</a>
+              <a href="/index">About Me</a>
             </li>
             <li >
-              <a href="#">Bold</a>
+              <a href="#">Projects</a>
             </li>
             <li >
-              <a href="#">Docs</a>
+              <a href="#">Courses</a>
             </li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </nav>
+
+    <div class="row">
+      <div class="content" style="width: 200px; height: 200px; background-color: red; position: absolute; left: 200px"></div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
