--- a/index.html
+++ b/index.html
@@ -10,43 +10,73 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
-    <link href="css/toolkit-minimal.css" rel="stylesheet">
     <link href="css/my-theme.css" rel="stylesheet">
 
   </head>
   <body>
-
-    <nav class="db pr pk te ed app-navbar">
-      <div class="e">
-        <div class="ph">
-          <button type="button" class="pl collapsed p-x-0" data-toggle="collapse" data-target="#navbar-collapse">
-            <span class="dm">Toggle navigation</span>
-            <span class="pm"></span>
-            <span class="pm"></span>
-            <span class="pm"></span>
-          </button>
-          <a class="l" href="#">
-            <span>Gregory Vincent Scott</span>
-          </a>
+    <div class="row" id="main-nav">
+        <div class="col-sm-4 col-sm-offset-2">
+            <a id="name-title" href="./index.html">Gregory Vincent Scott</a>
         </div>
-        <div class="pi collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav ow">
-            <li class="active">
-              <a href="/index">About Me</a>
-            </li>
-            <li >
-              <a href="#">Projects</a>
-            </li>
-            <li >
-              <a href="#">Courses</a>
-            </li>
-          </ul>
+        <div class="col-sm-4">
+            <div class="pull-right" id="navlist">
+              <ul>
+                <li><a href="./index.html">About Me</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Courses</a></li>
+              </ul>
+            </div>
         </div>
-      </div>
-    </nav>
+    </div>
 
     <div class="row">
-      <div class="content" style="width: 200px; height: 200px; background-color: red; position: absolute; left: 200px"></div>
+       <div class="intro-pic col-sm-8 col-sm-offset-2" style="padding-top:30px">
+          <img src="./Images/profpic.jpg" class="img-responsive img-circle" alt="Main Picture" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+       </div>
+    </div>
+    <div class="row">
+       <div class="intro-text col-sm-8 col-sm-offset-2">
+          <h3 align="center">About Me</h3>
+          <p>
+          Currently a senior in Computer Engineering with a minor in Computer Science at Virginia Tech, I am originally from a small town, West Grove, Pennsylvania (just west of Philadelphia). &nbsp; Being just short of the Delaware border, I attended high school at Salesianum School in Wilmington, DE. &nbsp; Engineering was not always such a sure path for me growing up. &nbsp; Throughout my life I have developed many interests that span a wide variety of subjects. &nbsp; At one point in my life I thought I would go into film production because I enjoyed creating small movies with my friends and later editing them with Adobe software. &nbsp; At another point I thought I would go into construction because I loved to build things (mostly treehouses and skateboard ramps).
+          </p>
+       </div>
+    </div>
+    <div class="row" style="margin-top: 10px">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="jumbotron jumbotron-arttech">
+                <p id="jumbo-text">
+                 Ultimately, I recognized a growing passion for developing with technology, particulary in the creative design process. &nbsp; Technology that tells a story, whether it be through a website, a mobile app, a responsive array of LED lights, or even a ride at a Disney park, is what interests me the most. &nbsp; Technology inspired by art is what I strive to conclusively work with the rest of my life.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="margin-top: -20px">
+        <h3 align="center">Extracurricular Interests</h3>
+    </div>
+    <div class="row" style="margin-top: 10px">
+        <div class="col-sm-4 col-sm-offset-2 intro-pic">
+            <img src="./Images/guitar.jpg" class="img-responsive img-circle" alt="Guitar" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+        </div>
+        <div class="col-sm-4 intro-pic">
+            <img src="./Images/hockey.jpg" class="img-responsive img-circle" alt="Hockey" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+        </div>
+    </div>
+    <div class="row" style="margin-top: 5px">
+        <div class="col-sm-4 col-sm-offset-2">
+            <h4 align="center" style="padding-left: 5px">Guitar</h4>
+        </div>
+        <div class="col-sm-4">
+            <h4 align="center" style="padding-left: 7px">Lifting/Hockey</h4>
+        </div>
+    </div>
+    <div class="row" style="margin-top: 5px">
+        <div class="col-sm-4 col-sm-offset-2">
+            <!-- music description -->
+        </div>
+        <div class="col-sm-4">
+            <!-- lifting description -->
+        </div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
