Changes to the interests display on the About Me page

--- a/index.html
+++ b/index.html
@@ -55,13 +55,22 @@
         <h3 align="center">Extracurricular Interests</h3>
     </div>
     <div class="row" style="margin-top: 10px">
-        <div class="col-sm-4 col-sm-offset-2 intro-pic">
-            <img src="./Images/guitar.jpg" class="img-responsive img-circle" alt="Guitar" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+        <div class="col-sm-4 col-sm-offset-2">
+            <img src="./Images/guitar.jpg" class="img-responsive img-circle" alt="Guitar" style="display:block;margin-left:auto;margin-right:auto;height:200px" align="center">
+            <h4 align="center" style="padding-left: 5px">Guitar</h4>
+            <p>
+             Basd aslkdf sd sdflasd f asd flkas dflkasdfkl asdlf alksdfkl kj fjklasd f alskdf kd fjaksldf kei fjdskf ei fdkskfksdkf  fjdkf sdfj s s  kdfjjd fksdfk
+            </p>
         </div>
-        <div class="col-sm-4 intro-pic">
-            <img src="./Images/hockey.jpg" class="img-responsive img-circle" alt="Hockey" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+        <div class="col-sm-4">
+            <img src="./Images/hockey.jpg" class="img-responsive img-circle" alt="Hockey" style="display:block;margin-left:auto;margin-right:auto;height:200px" align="center">
+            <h4 align="center" style="padding-left: 7px">Lifting/Hockey</h4>
+            <p>
+             Basd aslkdf sd sdflasd f asd flkas dflkasdfkl asdlf alksdfkl kj fjklasd f alskdf kd fjaksldf kei fjdskf ei fdkskfksdkf  fjdkf sdfj s s  kdfjjd fksdfk
+            </p>
         </div>
     </div>
+    <!--
     <div class="row" style="margin-top: 5px">
         <div class="col-sm-4 col-sm-offset-2">
             <h4 align="center" style="padding-left: 5px">Guitar</h4>
@@ -70,14 +79,7 @@
             <h4 align="center" style="padding-left: 7px">Lifting/Hockey</h4>
         </div>
     </div>
-    <div class="row" style="margin-top: 5px">
-        <div class="col-sm-4 col-sm-offset-2">
-            <!-- music description -->
-        </div>
-        <div class="col-sm-4">
-            <!-- lifting description -->
-        </div>
-    </div>
+    -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
