Finished interests part of About Me page. Added js file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
     <link href="css/my-theme.css" rel="stylesheet">
+    
 
   </head>
   <body>
@@ -57,33 +58,36 @@
     <div class="row" style="margin-top: 10px">
         <div class="col-sm-4 col-sm-offset-2">
             <img src="./Images/guitar.jpg" class="img-responsive img-circle" alt="Guitar" style="display:block;margin-left:auto;margin-right:auto;height:200px" align="center">
-            <h4 align="center" style="padding-left: 5px">Guitar</h4>
-            <p>
-             Basd aslkdf sd sdflasd f asd flkas dflkasdfkl asdlf alksdfkl kj fjklasd f alskdf kd fjaksldf kei fjdskf ei fdkskfksdkf  fjdkf sdfj s s  kdfjjd fksdfk
+            <h4 align="center">Guitar</h4>
+            <p><center>
+             Throughout my life I have played multiple instruments (starting with the piano as most people do), however none have been as significant to me as the guitar. &nbsp; The guitar has always been an escape for me because it has a way of clearing my head from any worry or stress. &nbsp; Along with both acoustic and electric guitar I have learned to play bass guitar and 
+            </center></p>
+            <p id="guitar-see-more" class="extra-text" style="text-align: center">
+             I sing. &nbsp; I play a variety of genre's from acoustic/reggae to any form of rock. &nbsp; As a result I have been in a few bands and played some fun small gigs. &nbsp; Listed below is a few videos showing some of these performances.
             </p>
+            <div style="text-align: center">
+            <button type="button" class="btn btn-success" id="music-seemore-btn">See more</button>
+            </div>
         </div>
         <div class="col-sm-4">
             <img src="./Images/hockey.jpg" class="img-responsive img-circle" alt="Hockey" style="display:block;margin-left:auto;margin-right:auto;height:200px" align="center">
             <h4 align="center" style="padding-left: 7px">Lifting/Hockey</h4>
-            <p>
-             Basd aslkdf sd sdflasd f asd flkas dflkasdfkl asdlf alksdfkl kj fjklasd f alskdf kd fjaksldf kei fjdskf ei fdkskfksdkf  fjdkf sdfj s s  kdfjjd fksdfk
+            <p><center>
+             From about as far back as I can remember, I have been a Philadelphia Flyers fan. &nbsp; This lead to a long career of playing Ice Hockey for me that lasted until I started college. &nbsp; While I still remain a Flyers fan, I decided that I would not have the time to play at Virginia Tech in order to focus on school. &nbsp; I started lifting in high school but have since taken it more
+            </center></p>
+            <p id="lifting-see-more" class="extra-text" style="text-align: center">
+              seriously without hockey to keep active. &nbsp; Lifting (or bodybuilding) is important to me because it involves setting goals and keeps me driven. &nbsp; That habit of pushing towards a goal carries over into how I handle other aspects of my life.
             </p>
+            <div style="text-align: center">
+            <button type="button" class="btn btn-success" id="lifting-seemore-btn">See more</button>
+            </div>
         </div>
     </div>
-    <!--
-    <div class="row" style="margin-top: 5px">
-        <div class="col-sm-4 col-sm-offset-2">
-            <h4 align="center" style="padding-left: 5px">Guitar</h4>
-        </div>
-        <div class="col-sm-4">
-            <h4 align="center" style="padding-left: 7px">Lifting/Hockey</h4>
-        </div>
-    </div>
-    -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/my-actions.js"></script>
   </body>
 </html>
