--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   </head>
   <body>
+    <!-- My custom navbar -->
     <div class="row" id="main-nav">
         <div class="col-sm-4 col-sm-offset-2">
             <a id="name-title" href="./index.html">Gregory Vincent Scott</a>
@@ -29,7 +30,7 @@
             </div>
         </div>
     </div>
-
+    <!-- Main about me section -->
     <div class="row">
        <div class="intro-pic col-sm-8 col-sm-offset-2" style="padding-top:30px">
           <img src="./Images/profpic.jpg" class="img-responsive img-circle" alt="Main Picture" style="display:block;margin-left:auto;margin-right:auto;" align="center">
@@ -52,6 +53,7 @@
             </div>
         </div>
     </div>
+    <!-- Interests -->
     <div class="row" style="margin-top: -20px">
         <h3 align="center">Extracurricular Interests</h3>
     </div>
@@ -81,6 +83,15 @@
             <div style="text-align: center">
             <button type="button" class="btn btn-success" id="lifting-seemore-btn">See more</button>
             </div>
+        </div>
+    </div>
+    <!-- Hobby Examples -->
+    <div class="row" style="margin-top: 10px">
+        <h3 align="center">Just a few gigs..</h3>
+    </div>
+    <div class="row" style="margin-top: 10px">
+        <div class="col-sm-4 col-sm-offset-2">
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/6GA3UIzYSuo" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
