Publishing to git pages site

--- a/index.html
+++ b/index.html
@@ -91,14 +91,18 @@
     </div>
     <div class="row" style="margin-top: 10px">
         <div class="col-sm-4 col-sm-offset-2">
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/6GA3UIzYSuo" frameborder="0" allowfullscreen></iframe>
+            <div style="margin: 0px auto; text-align: center;">
+              <iframe width="420" height="315" src="https://www.youtube.com/embed/6GA3UIzYSuo" frameborder="0" allowfullscreen></iframe>
+            </div>
             <h4 align="center">High School Talent Show</h4>
             <p>
               This is a video of my reggae/rock band in high school playing at our school talent show senior year. &nbsp; I am the guitarist on the left (turned up way too loud). &nbsp; We open with Amber by 311, play Badfish by Sublime, and then end with Stir It Up by Bob Marley.
             </p>
         </div>
         <div class="col-sm-4">
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/ybwhVbej9vA" frameborder="0" allowfullscreen></iframe>
+            <div style="margin: 0px auto; text-align: center;">
+              <iframe width="420" height="315" src="https://www.youtube.com/embed/ybwhVbej9vA" frameborder="0" allowfullscreen></iframe>
+            </div>
             <h4 align="center">University of Delaware Day Party</h4>
             <p>
               These are a medley of clips of a small "gig" in which I lead a band of three. &nbsp; We played songs by Sublime, Third Eye Blind, Lenny Kravitz, Blink 182, and Sugar Ray.
