--- a/projects.html
+++ b/projects.html
@@ -31,14 +31,10 @@
         </div>
     </div>
 
-    <div class="row">
-       <div class="intro-pic col-sm-8 col-sm-offset-2" style="padding-top:30px">
-          <img src="./Images/profpic.jpg" class="img-responsive img-circle" alt="Main Picture" style="display:block;margin-left:auto;margin-right:auto;" align="center">
-       </div>
-    </div>
+    <!-- Projects Head -->
     <div class="row">
        <div class="intro-text col-sm-8 col-sm-offset-2">
-          <h3 align="center">About Me</h3>
+          <h3 align="center">Projects</h3>
           <p>
           Currently a senior in Computer Engineering with a minor in Computer Science at Virginia Tech, I am originally from a small town, West Grove, Pennsylvania (just west of Philadelphia). &nbsp; Being just short of the Delaware border, I attended high school at Salesianum School in Wilmington, DE. &nbsp; Engineering was not always such a sure path for me growing up. &nbsp; Throughout my life I have developed many interests that span a wide variety of subjects. &nbsp; At one point in my life I thought I would go into film production because I enjoyed creating small movies with my friends and later editing them with Adobe software. &nbsp; At another point I thought I would go into construction because I loved to build things (mostly treehouses and skateboard ramps).
           </p>
