Initial work on projects page

--- a/projects.html
+++ b/projects.html
@@ -32,22 +32,27 @@
     </div>
 
     <!-- Projects Head -->
+    <div class="row" style="margin-top: 20px">
+        <div class="col-sm-2 col-sm-offset-2">
+            <img src="./Images/Projects/internal.png" class="img-responsive img-circle" alt="Main Picture" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+        </div>
+        <div class="col-sm-2">
+            <img src="./Images/Projects/swift.png" class="img-responsive img-circle" alt="Main Picture" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+        </div>
+        <div class="col-sm-2">
+            <img src="./Images/Projects/lights.jpg" class="img-responsive img-circle" alt="Main Picture" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+        </div>
+        <div class="col-sm-2">
+            <img src="./Images/Projects/wumpus.png" class="img-responsive img-circle" alt="Main Picture" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+        </div>
+    </div>
     <div class="row">
        <div class="intro-text col-sm-8 col-sm-offset-2">
           <h3 align="center">Projects</h3>
           <p>
-          Currently a senior in Computer Engineering with a minor in Computer Science at Virginia Tech, I am originally from a small town, West Grove, Pennsylvania (just west of Philadelphia). &nbsp; Being just short of the Delaware border, I attended high school at Salesianum School in Wilmington, DE. &nbsp; Engineering was not always such a sure path for me growing up. &nbsp; Throughout my life I have developed many interests that span a wide variety of subjects. &nbsp; At one point in my life I thought I would go into film production because I enjoyed creating small movies with my friends and later editing them with Adobe software. &nbsp; At another point I thought I would go into construction because I loved to build things (mostly treehouses and skateboard ramps).
+            This page of my site is meant to document some of the projects I have worked on both within and outside of the boundaries of acadamia (I will specify which is which). &nbsp; 
           </p>
        </div>
-    </div>
-    <div class="row" style="margin-top: 10px">
-        <div class="col-sm-8 col-sm-offset-2">
-            <div class="jumbotron jumbotron-arttech">
-                <p id="jumbo-text">
-                 Ultimately, I recognized a growing passion for developing with technology, particulary in the creative design process. &nbsp; Technology that tells a story, whether it be through a website, a mobile app, a responsive array of LED lights, or even a ride at a Disney park, is what interests me the most. &nbsp; Technology inspired by art is what I strive to conclusively work with the rest of my life.
-                </p>
-            </div>
-        </div>
     </div>
     
 
