--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
              Throughout my life I have played multiple instruments (starting with the piano as most people do), however none have been as significant to me as the guitar. &nbsp; The guitar has always been an escape for me because it has a way of clearing my head from any worry or stress. &nbsp; Along with both acoustic and electric guitar I have learned to play bass guitar and 
             </center></p>
             <p id="guitar-see-more" class="extra-text" style="text-align: center">
-             I sing. &nbsp; I play a variety of genre's from acoustic/reggae to any form of rock. &nbsp; As a result I have been in a few bands and played some fun small gigs. &nbsp; Listed below is a few videos showing some of these performances.
+             I sing. &nbsp; I play a variety of genre's from acoustic/reggae to any form of rock. &nbsp; As a result I have been in a few bands and played some fun small gigs. &nbsp; Listed below are a few videos showing some of these performances.
             </p>
             <div style="text-align: center">
             <button type="button" class="btn btn-success" id="music-seemore-btn">See more</button>
@@ -95,18 +95,18 @@
               <iframe width="420" height="315" src="https://www.youtube.com/embed/6GA3UIzYSuo" frameborder="0" allowfullscreen></iframe>
             </div>
             <h4 align="center">High School Talent Show</h4>
-            <p>
+            <p><center>
               This is a video of my reggae/rock band in high school playing at our school talent show senior year. &nbsp; I am the guitarist on the left (turned up way too loud). &nbsp; We open with Amber by 311, play Badfish by Sublime, and then end with Stir It Up by Bob Marley.
-            </p>
+            </center></p>
         </div>
         <div class="col-sm-4">
             <div style="margin: 0px auto; text-align: center;">
               <iframe width="420" height="315" src="https://www.youtube.com/embed/ybwhVbej9vA" frameborder="0" allowfullscreen></iframe>
             </div>
             <h4 align="center">University of Delaware Day Party</h4>
-            <p>
+            <p><center>
               These are a medley of clips of a small "gig" in which I lead a band of three. &nbsp; We played songs by Sublime, Third Eye Blind, Lenny Kravitz, Blink 182, and Sugar Ray.
-            </p>
+            </center></p>
         </div>
     </div>
     <div class="row">
