Mostly completed DailyLyfe section on Projects (still needs video and github link). Started RockSat

--- a/projects.html
+++ b/projects.html
@@ -34,27 +34,72 @@
     <!-- Projects Head -->
     <div class="row" style="margin-top: 20px">
         <div class="col-sm-2 col-sm-offset-2">
-            <img src="./Images/Projects/internal.png" class="img-responsive img-circle" alt="Main Picture" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+            <img src="./Images/Projects/internal.png" class="img-responsive img-circle" alt="RockSat-X" style="display:block;margin-left:auto;margin-right:auto;" align="center">
         </div>
         <div class="col-sm-2">
-            <img src="./Images/Projects/swift.png" class="img-responsive img-circle" alt="Main Picture" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+            <img src="./Images/Projects/xcode-logo.png" class="img-responsive" alt="Xcode" style="display:block;margin-left:auto;margin-right:auto;" align="center">
         </div>
         <div class="col-sm-2">
-            <img src="./Images/Projects/lights.jpg" class="img-responsive img-circle" alt="Main Picture" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+            <img src="./Images/Projects/lights.jpg" class="img-responsive img-circle" alt="LED Lights" style="display:block;margin-left:auto;margin-right:auto;" align="center">
         </div>
         <div class="col-sm-2">
-            <img src="./Images/Projects/wumpus.png" class="img-responsive img-circle" alt="Main Picture" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+            <img src="./Images/Projects/wumpus.png" class="img-responsive img-circle" alt="Wumpus World" style="display:block;margin-left:auto;margin-right:auto;" align="center">
         </div>
     </div>
     <div class="row">
        <div class="intro-text col-sm-8 col-sm-offset-2">
           <h3 align="center">Projects</h3>
           <p>
-            This page of my site is meant to document some of the projects I have worked on both within and outside of the boundaries of acadamia (I will specify which is which). &nbsp; 
+            This page of my site is meant to document some of the projects I have worked on both within and outside of the boundaries of acadamia (I will specify which is which). &nbsp; For some of the projects I will include a link to a Github repository where the code is stored. &nbsp; However, due to concerns with the honor code at Virginia Tech, I will not be able to post up the code for particular classes that will not allow it.
           </p>
        </div>
     </div>
     
+    <hr class="linebreak">
+
+    <!-- Start of projects listing -->
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <h4 align="center">DailyLyfe Iphone App</h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4 col-sm-offset-2">
+            <img src="./Images/Projects/parse-logo.png" class="img-responsive" alt="Parse" style="display:block;margin-left:auto;margin-right:auto;height:100px" align="center">
+        </div>
+        <div class="col-sm-4">
+            <img src="./Images/Projects/swift.png" class="img-responsive" alt="Swift" style="display:block;margin-left:auto;margin-right:auto;height:90px" align="center">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <p>
+                Over the summer of 2015 I developed an IOS app, as the sole developer, with Apple's newest mobile language, Swift. &nbsp; I used Facebook's Parse.com and its IOS API to handle the backend of the app. &nbsp; A close friend of mine from high school approached me in the spring of 2015 with an idea for a social media app and I agreed to build it for him. &nbsp; The idea is a form of social media in which users can "post" once per day and each post is to be treated like a blog post essentially. &nbsp; Each post can consist of a picture and/or a video (up to 15 seconds in length) and/or text to describe the day, either briefly or in a more elaborate form. &nbsp; Also included in the app is a community (or category) aspect. &nbsp; When creating a post, the user can decide to post in a specific community that relates to the subject of their post. &nbsp; For example, if I were to spend a day surfing and I wanted to make a post describing my day, I would post to the community "SurfingLyfe". &nbsp; Communities make it easier for users to filter the content they wish to see. &nbsp; I also implemented a "following" feature (called "adding a neighbor") so that users can keep track of their favorite posters. &nbsp; My focus as the only developer was to prioritize the functionality of the app so that we could get it into beta-testing as soon as possible. &nbsp; The app is now in beta-testing on IOS's Testflight and while its aethestics are not up to my personal standards, the app runs very well. &nbsp; Below is a video of myself sampling the app along with a link to a Github repo that I will include SOME of the code running the app.
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4 col-sm-offset-2">
+            <!-- Video sample of app -->
+        </div>
+        <div class="col-sm-4">
+            <!-- Github Link -->
+        </div>
+    </div>
+
+    <hr class="linebreak">
+
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <h4 align="center">RockSat-X</h4>
+        </div>
+    </div>
+    <div class="col-sm-8 col-sm-offset-2">
+        <p>
+            In September 2014 I joined the RockSat-X program at Virginia Tech, of which I am still a member. &nbsp; Each year we assemble a payload (section in the body of a rocket) for NASA's RockSat-X program. &nbsp; This past year we attempted a feat that had only been done once before. &nbsp; Throughout the year we worked to assemble our own 3D printer that would fit in a typical payload so that we could test 3D printing in space. &nbsp; I worked on the electronics team which handled mostly the electronics for data collection during the flight. &nbsp; In particular I worked on callibrating an Arduino Micro to read data from accelerometers and temperature sensors. &nbsp; I also helped set-up a <a href="http://hackhd.com/" target="_blank">HackHD</a> camera to be trigured by the Arduino during flight so that we could capture footage of the printer in action.
+        </p>
+    </div>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
