Three projects complete

--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
             <p>
-                Over the summer of 2015 I developed an IOS app, as the sole developer, with Apple's newest mobile language, Swift. &nbsp; I used Facebook's Parse.com and its IOS API to handle the backend of the app. &nbsp; A close friend of mine from high school approached me in the spring of 2015 with an idea for a social media app and I agreed to build it for him. &nbsp; The idea is a form of social media in which users can "post" once per day and each post is to be treated like a blog post essentially. &nbsp; Each post can consist of a picture and/or a video (up to 15 seconds in length) and/or text to describe the day, either briefly or in a more elaborate form. &nbsp; Also included in the app is a community (or category) aspect. &nbsp; When creating a post, the user can decide to post in a specific community that relates to the subject of their post. &nbsp; For example, if I were to spend a day surfing and I wanted to make a post describing my day, I would post to the community "SurfingLyfe". &nbsp; Communities make it easier for users to filter the content they wish to see. &nbsp; I also implemented a "following" feature (called "adding a neighbor") so that users can keep track of their favorite posters. &nbsp; My focus as the only developer was to prioritize the functionality of the app so that we could get it into beta-testing as soon as possible. &nbsp; The app is now in beta-testing on IOS's Testflight and while its aethestics are not up to my personal standards, the app runs very well. &nbsp; Below is a video of myself sampling the app along with a link to a Github repo that I will include SOME of the code running the app.
+                Over the summer of 2015 I developed an IOS app as the sole developer, with Apple's newest mobile language, Swift. &nbsp; I used Facebook's Parse.com and its IOS API to handle the backend of the app. &nbsp; A close friend of mine from high school approached me in the spring of 2015 with an idea for a social media app and I agreed to build it for him. &nbsp; The idea is a form of social media in which users can "post" once per day and each post is to be treated like a blog post essentially. &nbsp; Each post can consist of a picture and/or a video (up to 15 seconds in length) and/or text to describe the day, either briefly or in a more elaborate form. &nbsp; Also included in the app is a community (or category) aspect. &nbsp; When creating a post, the user can decide to post in a specific community that relates to the subject of their post. &nbsp; For example, if I were to spend a day surfing and I wanted to make a post describing my day, I would post to the community "SurfingLyfe". &nbsp; Communities make it easier for users to filter the content they wish to see. &nbsp; I also implemented a "following" feature (called "adding a neighbor") so that users can keep track of their favorite posters. &nbsp; My focus as the only developer was to prioritize the functionality of the app so that we could get it into beta-testing as soon as possible. &nbsp; The app is now in beta-testing on IOS's Testflight and while its aethestics are not up to my personal standards, the app runs very well. &nbsp; Below is a video of myself sampling the app along with a link to a Github repo that I will include SOME of the code running the app.
             </p>
         </div>
     </div>
@@ -83,7 +83,9 @@
             <!-- Video sample of app -->
         </div>
         <div class="col-sm-4">
-            <!-- Github Link -->
+            <a href="https://github.com/gregscott94" target="_blank">
+            <img src="./Images/Projects/github-logo.jpeg" class="img-responsive" alt="Github" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+          </a>
         </div>
     </div>
 
@@ -94,12 +96,56 @@
             <h4 align="center">RockSat-X</h4>
         </div>
     </div>
-    <div class="col-sm-8 col-sm-offset-2">
-        <p>
-            In September 2014 I joined the RockSat-X program at Virginia Tech, of which I am still a member. &nbsp; Each year we assemble a payload (section in the body of a rocket) for NASA's RockSat-X program. &nbsp; This past year we attempted a feat that had only been done once before. &nbsp; Throughout the year we worked to assemble our own 3D printer that would fit in a typical payload so that we could test 3D printing in space. &nbsp; I worked on the electronics team which handled mostly the electronics for data collection during the flight. &nbsp; In particular I worked on callibrating an Arduino Micro to read data from accelerometers and temperature sensors. &nbsp; I also helped set-up a <a href="http://hackhd.com/" target="_blank">HackHD</a> camera to be trigured by the Arduino during flight so that we could capture footage of the printer in action.
-        </p>
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2">
+          <p>
+              In September 2014 I joined the <a href="https://www.facebook.com/vtrocksatx?fref=ts" target="_blank">RockSat-X program at Virginia Tech</a>, of which I am still a member. &nbsp; Each year we assemble a payload (section in the body of a rocket) for NASA's RockSat-X program. &nbsp; This past year we attempted a feat that had only been done once before. &nbsp; Throughout the year we worked to assemble our own 3D printer that would fit in a typical payload so that we could test 3D printing in space. &nbsp; I worked on the electronics team which handled mostly the electronics for data collection during the flight. &nbsp; In particular I worked on callibrating an Arduino Micro to read data from accelerometers and temperature sensors. &nbsp; I also helped set-up a <a href="http://hackhd.com/" target="_blank">HackHD</a> camera to be trigured by the Arduino during flight so that we could capture footage of the printer in action. &nbsp; We launched in August 2015 and successfully 3D printed our intended object, the Virginia Tech logo. &nbsp; Unfortunately there was a housing leak when the rocket landed in the ocean as a part of its return to Earth. &nbsp; None of our data was corrupted as a result of this, however we lost our video footage of the printer during flight. &nbsp; Below is footage from one of our tests right before launch in which the printer is printing upside-down. &nbsp; The printer starts up at about a minute and 10 seconds in.
+          </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2">
+        <div style="margin: 0px auto; text-align: center;">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/c1p1Bej-dXY" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
     </div>
 
+    <hr class="linebreak">
+
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <h4 align="center">Wumpus World</h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4 col-sm-offset-2">
+            <img src="./Images/Projects/python.png" class="img-responsive" alt="Python" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+        </div>
+        <div class="col-sm-4">
+            <img src="./Images/Projects/wumpus-world.png" class="img-responsive" alt="Wumpus World" style="display:block;margin-left:auto;margin-right:auto;height:100px" align="center">
+        </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2">
+          <p>
+            In my Spring 2015 semester I took a four credit Artificial Intelligence class that was a mixture of graduate and undergraduate students. &nbsp; The largest project in the class was to develop an environment for the game "Wumpus World" and to create and code an agent to intelligently attempt navigating the 4x4 area. &nbsp; A decent description of the game is present <a href="http://cis-linux1.temple.edu/~ingargio/cis587/readings/wumpus.shtml" target="_blank">here</a>. &nbsp; To appropriately construct the game, I had to build the environment and the agent separately. &nbsp; The only form of communication between the two was that the environment could tell the agent was senses it should be aware of in the square of the agents current location so that the agent could not cheat. &nbsp; Therefore the agent had to use a knowledge base method as memory and logical reasoning to decide whether it thought squares were safe or not. &nbsp; I created the environment and its GUI with Python's Tkinter library. &nbsp; Then I made the agent with an initial knowledge base that knew how to update the agent's knowledge based upon experiencing certain senses in the Wumpus World. &nbsp; Below is a picture of my GUI and a link to the code on a Github repository.
+          </p>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4 col-sm-offset-2">
+            <img src="./Images/Projects/ww-sim.png" class="img-responsive" alt="WW Sim" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+        </div>
+        <div class="col-sm-4">
+          <a href="https://github.com/gregscott94/wumpus-world" target="_blank">
+            <img src="./Images/Projects/github-logo.jpeg" class="img-responsive" alt="Github" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+          </a>
+        </div>
+    </div>
+
+    <hr class="linebreak">
+    
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
