Initial release commit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <ul>
                 <li><a href="./index.html" style="color: #333333">About Me</a></li>
                 <li><a href="./projects.html">Projects</a></li>
-                <li><a href="#">Courses</a></li>
+                <li><a href="./courses.html">Courses</a></li>
               </ul>
             </div>
         </div>
