--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
               <ul>
                 <li><a href="./index.html">About Me</a></li>
                 <li><a href="./projects.html" style="color: #333333">Projects</a></li>
-                <li><a href="#">Courses</a></li>
+                <li><a href="./courses.html">Courses</a></li>
               </ul>
             </div>
         </div>
@@ -135,7 +135,7 @@
     </div>
     <div class="row">
         <div class="col-sm-4 col-sm-offset-2">
-            <img src="./Images/Projects/ww-sim.png" class="img-responsive" alt="WW Sim" style="display:block;margin-left:auto;margin-right:auto;" align="center">
+            <img src="./Images/Projects/ww-sim.PNG" class="img-responsive" alt="WW Sim" style="display:block;margin-left:auto;margin-right:auto;" align="center">
         </div>
         <div class="col-sm-4">
           <a href="https://github.com/gregscott94/wumpus-world" target="_blank">
@@ -145,6 +145,14 @@
     </div>
 
     <hr class="linebreak">
+
+    <div class="row">
+        <h3 align="center">The site is still in construction and more projects will be added soon!</h3>
+    </div>
+
+    <br>
+    <br>
+    <br>
     
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
