fixing initial release bug

--- a/courses.html
+++ b/courses.html
@@ -23,7 +23,7 @@
         <div class="col-sm-4">
             <div class="pull-right" id="navlist">
               <ul>
-                <li><a href="./index.html>About Me</a></li>
+                <li><a href="./index.html">About Me</a></li>
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="./courses.html"  style="color: #333333">Courses</a></li>
               </ul>
