Projects complete for now, made a few changes to About Me page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
              I sing. &nbsp; I play a variety of genre's from acoustic/reggae to any form of rock. &nbsp; As a result I have been in a few bands and played some fun small gigs. &nbsp; Listed below are a few videos showing some of these performances.
             </p>
             <div style="text-align: center">
-            <button type="button" class="btn btn-success" id="music-seemore-btn">See more</button>
+            <button type="button" class="btn btn-success" id="music-seemore-btn">Show more</button>
             </div>
         </div>
         <div class="col-sm-4">
@@ -81,7 +81,7 @@
               seriously without hockey to keep active. &nbsp; Lifting (or bodybuilding) is important to me because it involves setting goals and keeps me driven. &nbsp; That habit of pushing towards a goal carries over into how I handle other aspects of my life.
             </p>
             <div style="text-align: center">
-            <button type="button" class="btn btn-success" id="lifting-seemore-btn">See more</button>
+            <button type="button" class="btn btn-success" id="lifting-seemore-btn">Show more</button>
             </div>
         </div>
     </div>
@@ -103,9 +103,9 @@
             <div style="margin: 0px auto; text-align: center;">
               <iframe width="420" height="315" src="https://www.youtube.com/embed/ybwhVbej9vA" frameborder="0" allowfullscreen></iframe>
             </div>
-            <h4 align="center">University of Delaware Day Party</h4>
+            <h4 align="center">University of Delaware Gig</h4>
             <p><center>
-              These are a medley of clips of a small "gig" in which I lead a band of three. &nbsp; We played songs by Sublime, Third Eye Blind, Lenny Kravitz, Blink 182, and Sugar Ray.
+              These are a medley of clips of a small gig in which I lead a band of three. &nbsp; We played songs by Sublime, Third Eye Blind, Lenny Kravitz, Blink 182, and Sugar Ray.
             </center></p>
         </div>
     </div>
