--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
     <!-- Start of projects listing -->
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
-            <h4 align="center">DailyLyfe Iphone App</h4>
+            <h4 align="center">DailyLyfe iPhone App</h4>
         </div>
     </div>
     <div class="row">
